--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
+    "@types/socket.io-client": "^1.4.32",
+    "@types/styled-components": "^5.1.26",
+    "moment": "^2.29.4",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "socket.io-client": "^2.0.4",
+    "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
