--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/react-dom": "^18.2.6",
     "@types/socket.io-client": "^1.4.32",
     "@types/styled-components": "^5.1.26",
+    "bootstrap": "^5.3.0",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-moment": "^1.1.3",
     "react-scripts": "5.0.1",
